fix: burger color, z-index burger

--- a/Css/style.css
+++ b/Css/style.css
@@ -112,6 +112,7 @@ li {
 .header__burger {
   position: relative;
   right: 0px;
+  z-index: 3;
   top: 5px;
 }
 
@@ -127,7 +128,7 @@ li {
   position: absolute;
   top: 10px;
   right: 64px;
-  background-color: yellow;
+  background-color: white;
 }
 
 .header__burger span::after {
@@ -145,7 +146,7 @@ li {
   position: absolute;
   top: 20px;
   right: 64px;
-  background-color: red;
+  background-color: white;
 }
 
 @media (min-width: 768px) {
@@ -180,6 +181,7 @@ li {
   }
   .header__menu {
     top: 0;
+    z-index: 2;
     left: 100%;
     position: fixed;
     width: 100%;
@@ -213,10 +215,6 @@ li {
     left: 25%;
     -webkit-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
-  }
-  .header .active__burger::before {
-    -webkit-transform: rotate(45deg);
-            transform: rotate(45deg);
   }
 }
 
@@ -1044,12 +1042,17 @@ li {
   margin-right: 20px;
 }
 
+.footer__socials a img:hover {
+  fill: red;
+}
+
 .footer__socials a:last-child {
   margin-right: 0px;
 }
 
 .footer__socials a:hover {
-  color: #bdae82;
+  stroke: red;
+  fill: red;
 }
 
 @media (max-width: 920px) {
